Name the file in overwrite errors, reject null rules, keep reflection causes
Three small independent fixes.

The in-place overwrite error formatted "...approved file %s" but passed
the object under comparison, so it named no file and put the entire
serialised bean into the exception, the log and the CI output - which
matters when that bean carries sensitive data. Pre-fix the message read
"Exception while overwriting approved file
com.github.karsaig.approvalcrest.testdata.BeanWithPrimitives@76c3e77a".
Its two sibling throws already pass the path; this now matches them.

ElementIgnoreRule accepted a null value or matcher and then threw NPE
from matches(), deep inside the matcher and long after the rule was
declared, identifying neither the rule nor its path. Both factories now
reject null at the call site with the path in the message.

InaccessibleFieldException gains a cause-accepting constructor, used at
the two ReflectUtil sites that had one to give. The other two throw with
nothing to attach - Unsafe absent, or all access tiers exhausted - and
are left alone, as are the tier-1 catches that deliberately fall through.

The overwrite test uses a real temporary directory rather than the usual
in-memory filesystem: jimfs records POSIX permissions but does not
enforce them, so a write to a read-only file there succeeds and the
failure path is never reached.